# pypool

day0/ex00/: Hello.py
day0/ex01/: format_ft_time.py
day0/ex02/: find_ft_type.py
day0/ex03/: NULL_not_found.py
day0/ex04/: whatis.py
day0/ex05/: building.py
day0/ex06/: filteringstring.py  ft_filter.py  test.py
day0/ex07/: sos.py  test.py
day0/ex08/: Loading.py  tester.py
day0/ex09/: tester.py
day0/ex09/ft_package/: pyproject.toml
day0/ex09/ft_package/src/: src.py
day0/ex09/ft_package/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
day1/ex00/: give_bmi.py  tester.py
day1/ex01/: array2D.py  tester.py
day1/ex02/: tester.py
day1/ex03/: load_image.py  zoom.py
day1/ex04/: rotate.py  tester.py
day1/ex05/: pimp_image.py  tester.py
day2/: main.py
day2/ex00/: load_csv.py
day2/ex01/: aff_life.py  load_csv.py
day2/ex02/: load_csv.py
