[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name= "ft_package"
version= "0.0.1"
authors= [{name="bgoncalv", email="bgoncalv@42lausanne.ch"}]
description= "A sample test package"
readme= "README.MD"
requires-python = ""
classifiers= []

[project.urls]
"Homepage"= "https://github.com/bgoncalv/ft_package"